--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=url-shortener
+spring.datasource.url=jdbc:postgresql://localhost:5431/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
